fix gap

--- a/src/style.css
+++ b/src/style.css
@@ -6,16 +6,19 @@ body {
   margin: 0;
 }
 
+.stars {
+  display: flex;
+}
+
 .stars__star {
   height: var(--star-size);
   width: var(--star-size);
 
-  padding: 2px;
+  margin-right: 4px;
 
   background-image: url(./images/star.svg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
 }
 
 .stars--1 .stars__star:nth-child(-n + 1),
